@@ -8,6 +8,7 @@ $Id$
  * polarssl: support polarssl-1.3, thanks to Steffan Karger.
  * certificate: ignore certificate object without CKA_ID.
  * openssl: fix memory leak, thanks to ASPj.
+ * openssl: support 1.1 and libressl, thanks to Daiki Ueno.
 
 2013-10-11 - Version 1.11
 
